tests/baselines/reference/structTypeOfThisInInstanceMember.errors.txt
tests/cases/conformance/structs/members/instanceAndStaticMembers/structTypeOfThisInInstanceMember.ts(12,11): error TS2339: Property 'z' does not exist on type 'C'.


==== tests/cases/conformance/structs/members/instanceAndStaticMembers/structTypeOfThisInInstanceMember.ts (1 errors) ====
    // doc 2.1
    // Within constructors and instance member functions, the type of this is the instance type of the sturct.
    
    struct C {
        x = this;
        foo() {
            return this;
        }
        constructor(x: number) {
            var t = this;
            t.x;
            t.z; // error, z doesn't exist.
              ~
!!! error TS2339: Property 'z' does not exist on type 'C'.
            var r = t.foo();
        }
    }
    
    var c: C;
    // all ok
    var r = c.x;
    var ra = c.x.x.x;
    var r3 = c.foo();
    var rs = [r, r3];
    
    rs.forEach(x => {
        x.foo;
        x.x;
    });